mmarchitect (0.3.3) unstable; urgency=low
  * color settings from system or user preferences

mmarchitect (0.3.2) unstable; urgency=low
  * src/app.vala: default directory bug fix
  * Makefile, debian/README.Win32: better windows compilation support
  * icons/mmarchitect.ico: icon for windows

mmarchitect (0.3.1) unstable; urgency=low
  * src/app.vala, ui/about_dialog.ui: #! version and web fix

mmarchitect (0.3.0) unstable; urgency=low

  * src/editform.vala, src/filetab.vala, src/node.vala,
    src/settings.vala: Colors support and points prepare
  * src/app.vala, src/editform.vala, src/node.vala,
    ui/close_file_dialog.ui: some bug fixes
  * Makefile, debian/control, src/app.vala, src/consts.vala,
    src/editform.vala, src/export.vala, src/filetab.vala,
    src/mindmap.vala, src/node.vala, src/preferences.vala,
    src/settings.vala, ui/main.ui, ui/preferences.ui: debian right
    gcc depends, preference dialog, fonts buf fix, focus bug fix,
    better cairo colors using,  per file building
  * Makefile, src/consts.vala, src/editform.vala, src/filetab.vala,
    src/mindmap.vala, src/node.vala, src/preferences.vala,
    ui/preferences.ui: Preferences
  * Makefile, debian/control: Wheezy modification
  * Makefile, src/app.vala, src/preferences.vala: Preferences are
    saved to user config

 -- Ondrej Tuma <mcbig@compaq.zeropage.cz>  Fri, 02 Dec 2011 13:32:29 +0100

mmarchitect (0.2.1) unstable; urgency=low

  * new line style

 -- Ondrej Tuma <mcbig@zeropage.cz>  Mon, 30 Sep 2011 21:22:05 +0200

mmarchitect (0.2.0-1) unstable; urgency=low

  * src/app.vala, src/import.vala, ui/main.ui: FreeMind file basic
    import
  * debian/copyright, src/editform.vala, src/mindmap.vala,
    src/node.vala, src/settings.vala: Editform for node have smart
    position now
  * icons/comment_edit.png, icons/sticky_notes_pin.png, src/app.vala,
    src/consts.vala, src/mindmap.vala, src/node.vala,
    src/settings.vala, ui/main.ui: text notes support in gui,
    collaps label