@@ -200,15 +200,8 @@
                       <object class="GtkImageMenuItem" id="menuitem_edit2">
                         <property name="label">gtk-edit</property>
                         <property name="visible">True</property>
+                        <property name="use_underline">True</property>
                         <property name="use_stock">True</property>
-                      </object>
-                    </child>
-                    <child>
-                      <object class="GtkImageMenuItem" id="menuitem_default_color">
-                        <property name="label" translatable="yes">Default color</property>
-                        <property name="visible">True</property>
-                        <property name="image">image1</property>
-                        <property name="use_stock">False</property>
                       </object>
                     </child>
                     <child>
@@ -368,9 +361,5 @@
   </object>
   <object class="GtkMenu" id="nodemenu">
     <property name="visible">True</property>
-  </object>
-  <object class="GtkImage" id="image1">
-    <property name="visible">True</property>
-    <property name="stock">gtk-missing-image</property>
   </object>
 </interface>
